# GithubActions

./: CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
include/: functionsC.h  printHello.h
src/: functionsC.cpp  main.cpp  printHello.cpp
